Bug 161919 - Two programatically composed UI strings, not suitable for localization - "Delete All" %s and "Delete %s"
Summary: Two programatically composed UI strings, not suitable for localization - "Del...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks: l10n-Optimization
  Show dependency treegraph
 
Reported: 2024-07-05 17:14 UTC by Martin Srebotnjak
Modified: 2024-10-09 06:18 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Srebotnjak 2024-07-05 17:14:08 UTC
Description:
Two new strings since 24.8beta1 in sw/messages.po are generated programatically and are not suitable for languages with non-all-capitalized words in commands/titles/sentences nor for cases (like Slavic languages etc.).

These two strings must be changed before the release of 24.8, they are a showstopper for these languages.

The two strings are:

#. dyMpK
#: sw/inc/strings.hrc:720
msgctxt "STR_DELETE_CONTENT_TYPE"
msgid "Delete All %1"

#. 74EGB
#: sw/inc/strings.hrc:721
msgctxt "STR_DELETE_CONTENT"
msgid "Delete %1"


Steps to Reproduce:
Try to localize them in Slovenian, it will generate strings like: Izbriši Tabele or Izbriši vse Tabele, where it should be Izbriši tabele or Izbriši vse tabele, in some other cases also the cases do not match ...
Not all languages are like English.

Actual Results:
See above.

Expected Results:
See above.


Reproducible: Always


User Profile Reset: No

Additional Info:
Comment 1 Martin Srebotnjak 2024-07-05 17:14:58 UTC
Adding Sophie.
Comment 2 Julien Nabet 2024-07-05 17:29:29 UTC
Jim: noticing 94891dce760817686600f3a8d25e5eb735a1a133
tdf#160817 SwNavigator expose main functions for selected entry

thought you might be interested in this one.

Christian: since it concerns translation, thought you might be interested too.
Comment 3 Martin Srebotnjak 2024-07-12 04:12:25 UTC
This is a stopper for localizations, so after a week of not even being confirmed I raise the importance.
Comment 4 Buovjaga 2024-07-18 14:20:34 UTC
Priority is fine, but this is not about any crash, so severity is not major.
Comment 5 Xisco Faulí 2024-07-18 14:25:34 UTC
Hi Martin,
(In reply to Julien Nabet from comment #2)
> Jim: noticing 94891dce760817686600f3a8d25e5eb735a1a133
> tdf#160817 SwNavigator expose main functions for selected entry
> 
> thought you might be interested in this one.
> 
> Christian: since it concerns translation, thought you might be interested
> too.

This commit is in master only, so 24.8 is not affected.
Comment 6 Jim Raykowski 2024-07-20 06:08:09 UTC
I think this patch may resolve the issue:
https://gerrit.libreoffice.org/c/core/+/170789
Comment 7 Commit Notification 2024-10-09 05:27:56 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9f95e65730b273643d79d9a32cd11a8d5a40464c

Resolves tdf#161919 Two programatically composed UI strings not suitable

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.