Resolves tdf#161919 Two programatically composed UI strings not suitable

for localization

Change-Id: I20a914d9d158817b7c9605afc1972a91117fb5a8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170789
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Jenkins